photo edits reduce size

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-6">
-            <img class="img-fluid" src="images/EntryMercProfile.png" alt="character profile"><img class="img-fluid" src="images/EntryMercFullTrain.png" alt="character on a transit shuttle">
+            <img class="img-fluid" src="images/EntryMercProfile1080p.png" alt="character profile">
           </div>
           <div class="col"><h1>INTRODUCTION</h1><p><span style="color: #da9e00">Law abiding entry-level Mercenary.</span><br> <strong>Born:</strong> Loreville, Hurston. <br> <strong>Education: </strong> New Babbage, microTech. <br> <strong>Moto:</strong> Break it or make it.</p></div>
         </div>
@@ -49,11 +49,11 @@
         <div class="row">
           <div><h1>QUALIFICATIONS</h1></div>
           <div class="col-6"><h2>Delivery and Retrieval</h2><p><strong>Small Transport Pilot</strong> <br> RSI AURORA MR <br> Package transport <br> 7 Deliveries : 5 Successful : 2 Failures</p></div>
-          <img class="col-6" src="images/EntryMercAuroraMR.png" alt="character and spaceship">
+          <img class="col-6" src="images/EntryMercAuroraMRedit1080p.png" alt="character and spaceship">
           <img class="col-6" src="images/SC_14_Wallpaper_1080x1920.jpg" alt="spaceship turret firing">
           <div class="col-6"><h2>Turret Gunner</h2><p><strong>Gunner<span style="color: #da9e00"> (commissioned) </span></strong><br> CF-337 Panther Laser Repeater Turret <br> DRAKE CUTLASS BLACK <br> Missions (3) <br> Tango Targets (30+) Pacified <br><br><strong>Gunner<span style="color: #da9e00"> (commissioned) </span></strong><br> CF-227 Badger Laser Repeater Turret <br> RSI CONSTELLATION ANDROMEDA <br> Missions (1) <br> Transportation of High Yield Cargo from Rock Refinery [redacted] to [redacted] trademarket.</p></div>
           <div class="col-6"><h2>Ground Support Troop</h2><p><strong>Ground Troop Support <span style="color: #da9e00">(commissioned) </span></strong><br> Secure Bunker <br>Team liberate bunker from the criminal group [redacted]. <br> Succcessful, no casualties <br><br> <strong>Special Operations Support Troop <span style="color: #da9e00">(commissioned) </span></strong><br>Board and pacify <br>Team liberate luxury yacht [redacted] from the criminal group [redacted] and prevent sensitive data transmission, onboard security force [redacted] were present. <br> Partial Success; data lost, no casualties. <br><br><strong> Space Walk </strong><br> Special Operations mission <br> Short distance 20+ meters Ship to Ship <br><br><strong> Driver <span style="color: #da9e00">(commissioned) </span></strong><br> GREYCAT PTV BUGGY <br> Short range relocation <br> Elapsed 2 minutes <br><br><strong>Driver <span style="color: #da9e00">(commissioned) </span></strong> <br> TUMBRIL THE CYCLONE <br> Short range ship to site <br> severe weather <br> Elapsed 3 minutes</p></div>
-          <img class="col-6" src="images/SC_17_Wallpaper_1080x1920.jpg" alt="infantry">
+          <img class="col-6" src="images/EntryMercFullTrainedit1080p.png" alt="infantry">
         </div>
       </div>
     </section>
