adjust picture scaling and col size on images

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <div class="row">
           <div><h1>QUALIFICATIONS</h1></div>
           <div class="col-6"><h2>Delivery and Retrieval</h2><p><strong>Small Transport Pilot</strong> <br> RSI AURORA MR <br> Package transport <br> 7 Deliveries : 5 Successful : 2 Failures</p></div>
-          <img class="col-6" src="images/EntryMercAuroraMRedit1080p.png" alt="character and spaceship">
-          <img class="col-6" src="images/SC_14_Wallpaper_1080x1920.jpg" alt="spaceship turret firing">
+          <img class="col-sm-6" src="images/EntryMercAuroraMRedit1080p.png" alt="character and spaceship">
+          <img class="col-sm-6" src="images/SC_14_Wallpaper_1080x1920.jpg" alt="spaceship turret firing">
           <div class="col-6"><h2>Turret Gunner</h2><p><strong>Gunner<span style="color: #da9e00"> (commissioned) </span></strong><br> CF-337 Panther Laser Repeater Turret <br> DRAKE CUTLASS BLACK <br> Missions (3) <br> Tango Targets (30+) Pacified <br><br><strong>Gunner<span style="color: #da9e00"> (commissioned) </span></strong><br> CF-227 Badger Laser Repeater Turret <br> RSI CONSTELLATION ANDROMEDA <br> Missions (1) <br> Transportation of High Yield Cargo from Rock Refinery [redacted] to [redacted] trademarket.</p></div>
           <div class="col-6"><h2>Ground Support Troop</h2><p><strong>Ground Troop Support <span style="color: #da9e00">(commissioned) </span></strong><br> Secure Bunker <br>Team liberate bunker from the criminal group [redacted]. <br> Succcessful, no casualties <br><br> <strong>Special Operations Support Troop <span style="color: #da9e00">(commissioned) </span></strong><br>Board and pacify <br>Team liberate luxury yacht [redacted] from the criminal group [redacted] and prevent sensitive data transmission, onboard security force [redacted] were present. <br> Partial Success; data lost, no casualties. <br><br><strong> Space Walk </strong><br> Special Operations mission <br> Short distance 20+ meters Ship to Ship <br><br><strong> Driver <span style="color: #da9e00">(commissioned) </span></strong><br> GREYCAT PTV BUGGY <br> Short range relocation <br> Elapsed 2 minutes <br><br><strong>Driver <span style="color: #da9e00">(commissioned) </span></strong> <br> TUMBRIL THE CYCLONE <br> Short range ship to site <br> severe weather <br> Elapsed 3 minutes</p></div>
-          <img class="col-6" src="images/EntryMercFullTrainedit1080p.png" alt="infantry">
+          <img class="col-sm-6" src="images/EntryMercFullTrainedit1080p.png" alt="infantry">
         </div>
       </div>
     </section>
@@ -61,31 +61,33 @@
     <section id="contact">
       <div><h1>CONTACT</h1></div>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <h2>Commission Rate <span style="color: #da9e00">(Negotiable)</span></h2>
           <p><small>All commissions to be paid with eAUEC (Alpha United Earth Credits)</small><br><strong>High Yield Transportation Turret Support:</strong> Flat rate 50k plus percentage of payout.<br><strong>Gunner, Turret:</strong> Mission Split. <br><strong>Driver</strong> - Mission Split.<br><strong>Ground Troop:</strong> Mission Split plus cost of personal equipment. <br><strong>Special Operations:</strong> Mission Split plus cost of personal equipment.<br><strong>Pilot:</strong> Pending Medium Class License</p>
         </div>
-        <div class="col text-center">
+        <div class="col-md text-center">
           <h2>Socials</h2>
-          <div class="card">
+          <div class="row gy-3">
+          <div class="col-12 card">
             <img src="images/rsi_button_foreground_border.png" class="card-img" alt="..."></a>
             <a href="https://robertsspaceindustries.com/citizens/Thomascytosis" class="card-img-overlay">
               <div class="card-title"><h3 class="text-responsive">Star Citizen Profile</h3></div>
             </a>
           </div>
       
-          <div class="card">
+          <div class="col-12 card">
             <img src="images/rsi_button_foreground_border.png" class="card-img" alt="..."></a>
             <a href="https://discord.gg/UsdrpTR" class="card-img-overlay">
               <div class="card-title"><h3 class="text-responsive">RPNET Discord</h3></div>
             </a>
           </div>
       
-          <div class="card">
+          <div class="col-12 card">
             <img src="images/rsi_button_foreground_border.png" class="card-img" alt="..."></a>
             <a href="https://discordapp.com/users/Thomascytosis#5413" class="card-img-overlay">
               <div class="card-title"><h3 class="text-responsive">My Player On Discord</h3></div>
             </a>
+          </div>
           </div>
       </div>
     </section>
